2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Console.csproj:
	  Upgrade .NET version to 4.0.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DicConsole.cs:
	  Added methods without formatting.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* DicConsole.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.Console.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.
